<resources>
    <string name="app_name">V3 TEAM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rupee">\u20B90</string>
    <string name="title_activity_nav_dashboard">NavDashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="edittext_phone">phone</string>
    <string name="orders_open">Order Status:</string>
    <string name="sub_totsal">sub Total:</string>
    <string name="assign_lead">AssignLead:</string>
    <string name="grabnd_total">Grand Total:</string>
    <string name="cumstmr_paid">Custmor Paid:</string>
    <string name="disscount">Disscount</string>
    <string name="orders_status">OPEN</string>
    <string name="call">Call</string>
    <string name="time">19th jul 2018 at 08:30 AM</string>
    <string name="address">V3 \nVijayawada\n</string>
    <string name="map">Map</string>
    <string name="services">Fabric Sofa Shampoo</string>
    <string name="upload_bill">Upload Bill</string>
    <string name="enter_valid_number">enter number</string>
    <string name="enter_password">enter password</string>
    <string name="Rs">\u20B95000</string>
    <string name="error_invalid_mobile_number">enter 10 digit mobile number</string>
    <string name="open_jobs">Open Jobs</string>
    <string name="closed_jobs">Closed Jobs</string>
    <string name="cancelled_jobs">Cancelled Jobs</string>
    <string name="resonancel">Reason For Cancel</string>

    <string name="view">Customer Details </string>
    <string name="pending_jobs">Pending Jobs</string>
    <string name="start_progressing">Job Start</string>
    <string name="all_jobs">All Jobs</string>
    <string name="closed_job">closed job</string>
    <string name="cancel_job">Cancel job</string>
    <string name="sbservices_text"><![CDATA[One call for all your project,Appartments  &amp; Home Cleaning Service needs]]></string>
    <string name="quick_affrod_trust">Quick &#8226; Affordable &#8226; Trusted &#8226; Easy</string>
    <string name="submit">submit</string>
    <string name="rb1">Customer non-responsive even after 4 tries</string>
    <string name="rb2">Customer not available currently</string>
    <string name="rb3">Customer already got job done</string>
    <string name="rb4">Customer details icorrect</string>
    <string name="rb5">Materialnot available</string>
    <string name="rb6">Iam not available</string>
    <string name="rb7">price quoted is too high</string>
    <string name="rb8">Reshedule Job</string>
    <string name="rb9">Permanent Cancel</string>
    <string name="playstore_Text">This app only for team members go to this link for custmor app <u>V3CARE</u></string>
    <string name="timeanddtae">Time and Date</string>


    <!--    <string-array name="cancel_array">
        <item>Shuttle Badminton</item>
        <item>Tennis</item>
        <item>Table Tennis</item>
        <item>Basket Ball</item>
        <item>Foot Ball</item>
        <item>Volley Ball</item>
        <item>Hockey</item>
        <item>Swimming</item>
    </string-array>-->
</resources>
