<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/orders_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/taviraj_medium"
                    android:text="@string/orders_open"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/orderStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/orders_text"
                    android:fontFamily="@font/taviraj_medium"
                    android:text="@string/orders_status"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="28dp"
                    android:background="@drawable/viewbg"
                    android:fontFamily="@font/taviraj_medium"
                    android:text="@string/call"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/dimen_15dp" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/divider"
                android:layout_marginLeft="@dimen/dimen_15dp"
                android:layout_marginRight="@dimen/dimen_15dp"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/taviraj_medium"
                    android:text="Time:"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/time_text"
                    android:fontFamily="@font/taviraj_medium"
                    android:text="@string/time"
                    android:textColor="@color/black"
                    android:textSize="15dp" />


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/divider"
                android:layout_marginLeft="@dimen/dimen_15dp"
                android:layout_marginRight="@dimen/dimen_15dp"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/address_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/taviraj_medium"
                    android:text="Address:"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/address_text"
                    android:fontFamily="@font/taviraj_medium"
                    android:text="Shanok"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="28dp"
                    android:background="@drawable/viewbg"
                    android:fontFamily="@font/taviraj_medium"
                    android:text="@string/map"
                    android:drawableRight="@drawable/ic_location_on_black_24dp"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/dimen_15dp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/divider"
                android:layout_marginLeft="@dimen/dimen_15dp"
                android:layout_marginRight="@dimen/dimen_15dp"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/services_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/taviraj_medium"
                    android:text="Services:"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/category_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/services_text"
                    android:fontFamily="@font/taviraj_medium"
                    android:text="@string/services"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/package_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/category_name"
                    android:fontFamily="@font/taviraj_medium"
                    android:text="Furniture and Furnishings - carpet Shampooing"
                    android:textColor="@color/black"
                    android:textSize="15dp" />



            </RelativeLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>