<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Invoice.InvoiceActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/sub_total_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/sub_totsal"
            android:textColor="@android:color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:fontFamily="@font/poppins" />

        <TextView
            android:id="@+id/subTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/poppins"
            android:gravity="end"
            android:text="4235.0"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

    </LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/onlineTesx"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="PaymentType"
            android:textColor="@android:color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:fontFamily="@font/poppins" />
        <TextView
            android:id="@+id/onlineType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="end"
            android:textStyle="bold"
            android:fontFamily="@font/poppins"
            android:text="cod"
            android:textColor="@color/black"
            android:textSize="15dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/cusmr_paind_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cumstmr_paid"
            android:textColor="@android:color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:fontFamily="@font/poppins" />

        <TextView
            android:id="@+id/custmr_paid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/poppins"
            android:gravity="end"
            android:text="4235.0"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/reward_text"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="Rewards"
            android:textColor="@android:color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:fontFamily="@font/poppins" />
        <TextView
            android:id="@+id/rewards"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="end"
            android:textStyle="bold"
            android:fontFamily="@font/poppins"
            android:text="0.00"
            android:textColor="@color/black"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/discount_text"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/disscount"
            android:textColor="@android:color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:fontFamily="@font/poppins" />
        <TextView
            android:id="@+id/discount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="end"
            android:textStyle="bold"
            android:fontFamily="@font/poppins"
            android:text="0.00"
            android:textColor="@color/black"
            android:textSize="15dp" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/grand_tortal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/grabnd_total"
            android:textColor="@android:color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:fontFamily="@font/poppins" />

        <TextView
            android:id="@+id/total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/poppins"
            android:gravity="end"
            android:text="4235.0"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >



            <Button
                android:id="@+id/paymentLink"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"

                android:layout_weight="1"
                android:background="@drawable/loginbutton"
                android:text="PaymentLink"
                android:textColor="@color/white" />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>